[package]
name = "aquarium_keeper"
version = "0.1.0"
authors = ["jyuch <jyuch@users.noreply.github.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
